--- a/src/app/@ansyn/map-facade/package.json
+++ b/src/app/@ansyn/map-facade/package.json
@@ -14,7 +14,8 @@
 		"@turf/turf": "^5.1.6",
 		"lodash": "^4.17.11",
 		"angular2-uuid": "^1.1.1",
-		"auto-subscriptions": "^2.0.5"
+		"auto-subscriptions": "^2.0.5",
+		"file-saver": "^1.3.8"
 	},
 	"license": "MIT"
 }
