--- a/confd/conf.d/production.toml
+++ b/confd/conf.d/production.toml
@@ -29,5 +29,6 @@ keys = [
 	"/ansyn/floation/position/suffix",
 	"/ansyn/is/shadow/active",
 	"/ansyn/3d/enable",
-	"/ansyn/force/send/shadow/mouse/position"
+	"/ansyn/force/send/shadow/mouse/position",
+	"/ansyn/angle/debug/mode"
 ]
