--- a/src/app/@ansyn/imagery/package.json
+++ b/src/app/@ansyn/imagery/package.json
@@ -6,7 +6,8 @@
 	"license": "MIT",
 	"peerDependencies": {
 		"@angular/common": "^7.2.2",
-		"@angular/core": "^7.2.2"
+		"@angular/core": "^7.2.2",
+		"@types/geojson": "7946.0.3"
 	},
 	"dependencies": {
 		"auto-subscriptions": "^2.0.5",
