--- a/confd/conf.d/production.toml
+++ b/confd/conf.d/production.toml
@@ -30,5 +30,6 @@ keys = [
 	"/ansyn/is/shadow/active",
 	"/ansyn/3d/enable",
 	"/ansyn/force/send/shadow/mouse/position",
-	"/ansyn/angle/debug/mode"
+	"/ansyn/angle/debug/mode",
+	"/ansyn/anaglyph/sensornames"
 ]
