--- a/confd/conf.d/production.toml
+++ b/confd/conf.d/production.toml
@@ -3,6 +3,7 @@ src = "production.tmpl"
 dest = "/usr/share/nginx/html/assets/config/app.config.json"
 keys = [
 	"/ansyn/storage/baseurl",
+	"/ansyn/showcredentials",
     "/ansyn/overlay/baseurl",
     "/ansyn/overlay/api/find",
     "/ansyn/overlay/api/default",
