--- a/.travis.yml
+++ b/.travis.yml
@@ -1,11 +1,7 @@
 sudo: required # is required to use docker service in travis
 
 addons:
-  apt:
-    sources:
-      - google-chrome
-    packages:
-      - google-chrome-stable
+  chrome: stable
 
 language: node_js
 
