--- a/package.json
+++ b/package.json
@@ -31,17 +31,17 @@
     "testCompile": "cd build && gulp testCompile"
   },
   "dependencies": {
-    "@angular/animations": "^7.2.2",
+    "@angular/animations": "~8.2.14",
     "@angular/cdk": "^7.3.0",
-    "@angular/common": "^7.2.2",
-    "@angular/compiler": "^7.2.2",
-    "@angular/core": "^7.2.2",
-    "@angular/forms": "^7.2.2",
+    "@angular/common": "~8.2.14",
+    "@angular/compiler": "~8.2.14",
+    "@angular/core": "~8.2.14",
+    "@angular/forms": "~8.2.14",
     "@angular/http": "^7.2.2",
     "@angular/material": "^7.3.0",
-    "@angular/platform-browser": "^7.2.2",
-    "@angular/platform-browser-dynamic": "^7.2.2",
-    "@angular/router": "^7.2.2",
+    "@angular/platform-browser": "~8.2.14",
+    "@angular/platform-browser-dynamic": "~8.2.14",
+    "@angular/router": "~8.2.14",
     "@ansyn/event-drops": "^0.2.8-1.9",
     "@auth0/angular-jwt": "^2.0.0",
     "@ngrx/core": "^1.2.0",
@@ -76,28 +76,29 @@
     "primeng": "^6.1.4",
     "proj4": "^2.5.0",
     "rison": "^0.1.1",
-    "rxjs": "^6.4.0",
+    "rxjs": "~6.4.0",
+    "tslib": "^1.10.0",
     "wellknown": "^0.5.0",
-    "zone.js": "^0.8.29"
+    "zone.js": "~0.9.1"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "^0.13.8",
+    "@angular-devkit/build-angular": "~0.803.21",
     "@angular-devkit/build-ng-packagr": "^0.12.3",
-    "@angular/cli": "~7.2.3",
-    "@angular/compiler-cli": "^7.2.10",
-    "@angular/language-service": "^7.2.2",
+    "@angular/cli": "~8.3.21",
+    "@angular/compiler-cli": "~8.2.14",
+    "@angular/language-service": "~8.2.14",
     "@types/auth0-js": "^8.11.5",
     "@types/cesium": "^1.47.3",
     "@types/d3": "^4.13.1",
     "@types/file-saver": "^1.3.0",
     "@types/geojson": "7946.0.3",
-    "@types/jasmine": "~2.8.6",
+    "@types/jasmine": "~3.3.8",
     "@types/jasminewd2": "~2.0.3",
     "@types/lodash": "4.14.88",
     "@types/node": "~8.9.4",
     "@types/rison": "0.0.6",
     "@types/wellknown": "0.5.0",
-    "codelyzer": "~4.2.1",
+    "codelyzer": "^5.0.0",
     "find-in-files": "0.4.0",
     "gulp": "^4.0.0",
     "gulp-concat": "^2.6.1",
@@ -112,25 +113,25 @@
     "gulp-replace": "^0.6.1",
     "gulp-sequence": "^1.0.0",
     "gulp-shell": "^0.7.0",
-    "jasmine-core": "^3.3.0",
+    "jasmine-core": "~3.4.0",
     "jasmine-marbles": "^0.4.1",
-    "jasmine-spec-reporter": "^4.2.1",
+    "jasmine-spec-reporter": "~4.2.1",
     "jsdoc": "^3.6.3",
-    "karma": "^4.0.1",
-    "karma-chrome-launcher": "^2.2.0",
-    "karma-coverage-istanbul-reporter": "^2.0.4",
-    "karma-jasmine": "^2.0.1",
+    "karma": "~4.1.0",
+    "karma-chrome-launcher": "~2.2.0",
+    "karma-coverage-istanbul-reporter": "~2.0.1",
+    "karma-jasmine": "~2.0.1",
     "karma-jasmine-html-reporter": "^1.4.0",
     "ng-packagr": "^4.7.1",
     "pre-commit": "1.2.2",
-    "protractor": "^5.4.1",
+    "protractor": "~5.4.0",
     "protractor-screenshoter-plugin": "^0.5.0",
     "replace": "^1.0.0",
-    "ts-node": "~5.0.1",
+    "ts-node": "~7.0.0",
     "tsickle": "^0.34.0",
     "tslib": "^1.7.1",
-    "tslint": "~5.9.1",
-    "typescript": "~3.2.4"
+    "tslint": "~5.15.0",
+    "typescript": "~3.5.3"
   },
   "precommit": [
     "fix-all"
