--- a/src/app/@ansyn/ansyn/package.json
+++ b/src/app/@ansyn/ansyn/package.json
@@ -5,8 +5,8 @@
 		"@ngrx/core": "^1.2.0",
 		"@ngrx/store": "^7.2.0",
 		"@ngrx/effects": "^7.2.0",
-		"@angular/common": "^7.2.2",
-		"@angular/core": "^7.2.2",
+		"@angular/common": "~8.2.14",
+		"@angular/core": "~8.2.14",
 		"@ansyn/imagery": "0.6.2",
 		"@ansyn/map-facade": "0.6.2",
 		"@ansyn/menu": "0.6.2",
