--- a/src/app/@ansyn/imagery-cesium/package.json
+++ b/src/app/@ansyn/imagery-cesium/package.json
@@ -2,10 +2,10 @@
 	"name": "@ansyn/imagery-cesium",
 	"version": "0.6.2",
 	"peerDependencies": {
-		"@angular/core": "^7.2.2",
-		"@angular/common": "^7.2.2",
+		"@angular/core": "~8.2.14",
+		"@angular/common": "~8.2.14",
 		"@ansyn/imagery": "0.6.2",
-		"rxjs": "^6.4.0"
+		"rxjs": "~6.4.0"
 	},
 	"dependencies": {
 		"auto-subscriptions": "^2.0.5",
