--- a/src/app/@ansyn/imagery/package.json
+++ b/src/app/@ansyn/imagery/package.json
@@ -5,8 +5,8 @@
 	"author": "ansyn",
 	"license": "MIT",
 	"peerDependencies": {
-		"@angular/common": "^7.2.2",
-		"@angular/core": "^7.2.2",
+		"@angular/common": "~8.2.14",
+		"@angular/core": "~8.2.14",
 		"@types/geojson": "7946.0.3"
 	},
 	"dependencies": {
