--- a/src/app/@ansyn/menu/package.json
+++ b/src/app/@ansyn/menu/package.json
@@ -2,8 +2,8 @@
 	"name": "@ansyn/menu",
 	"version": "0.6.2",
 	"peerDependencies": {
-		"@angular/common": "^7.2.2",
-		"@angular/core": "^7.2.2",
+		"@angular/common": "~8.2.14",
+		"@angular/core": "~8.2.14",
 		"@ngrx/core": "^1.2.0",
 		"@ngrx/store": "^7.2.0",
 		"@ngrx/entity": "^7.2.0",
