--- a/src/app/@ansyn/ol/package.json
+++ b/src/app/@ansyn/ol/package.json
@@ -2,10 +2,10 @@
 	"name": "@ansyn/ol",
 	"version": "0.6.2",
 	"peerDependencies": {
-		"@angular/core": "^7.2.2",
-		"@angular/common": "^7.2.2",
+		"@angular/core": "~8.2.14",
+		"@angular/common": "~8.2.14",
 		"@ansyn/imagery": "0.6.2",
-		"rxjs": "^6.4.0",
+		"rxjs": "~6.4.0",
 		"@ngx-translate/core": "^10.0.2"
 	},
 	"dependencies": {
