--- a/package.json
+++ b/package.json
@@ -69,6 +69,7 @@
     "lodash-decorators": "^4.5.0",
     "mathjs": "^5.4.1",
     "moment": "^2.21.0",
+    "ng-pick-datetime": "^7.0.0",
     "ngx-bootstrap": "^2.0.4",
     "ngx-color-picker": "^7.5.0",
     "ngx-device-detector": "^1.3.5",
