--- a/package.json
+++ b/package.json
@@ -71,6 +71,7 @@
     "moment": "^2.21.0",
     "ngx-bootstrap": "^2.0.4",
     "ngx-color-picker": "^7.5.0",
+    "ngx-datetime-range-picker": "^2.0.2",
     "ngx-device-detector": "^1.3.5",
     "ngx-treeview": "^6.0.2",
     "ol": "^5.3.0",
