--- a/src/app/@ansyn/imagery-cesium/package.json
+++ b/src/app/@ansyn/imagery-cesium/package.json
@@ -5,14 +5,13 @@
 		"@angular/core": "^7.2.2",
 		"@angular/common": "^7.2.2",
 		"@ansyn/imagery": "1.6.33",
-		"rxjs": "^6.4.0"
-	},
-	"dependencies": {
+		"rxjs": "^6.4.0",
+		"cesium": "^1.66.0",
 		"auto-subscriptions": "^2.0.5",
 		"@turf/turf": "^5.1.6",
-		"cesium": "^1.66.0",
 		"ngx-color-picker": "^7.5.0",
 		"angular2-uuid": "^1.1.1"
 	},
+	"dependencies": {},
 	"license": "MIT"
 }
