--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
     "@angular/platform-browser-dynamic": "^7.2.2",
     "@angular/router": "^7.2.2",
     "@ansyn/event-drops": "^0.2.8-1.9",
+    "@ansyn/ng-pick-datetime": "^7.0.0",
     "@auth0/angular-jwt": "^2.0.0",
     "@ngrx/core": "^1.2.0",
     "@ngrx/effects": "^7.2.0",
@@ -69,7 +70,6 @@
     "lodash-decorators": "^4.5.0",
     "mathjs": "^5.4.1",
     "moment": "^2.21.0",
-    "ng-pick-datetime": "^7.0.0",
     "ngx-bootstrap": "^2.0.4",
     "ngx-color-picker": "^7.5.0",
     "ngx-device-detector": "^1.3.5",
