--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
     "@angular/platform-browser-dynamic": "^7.2.2",
     "@angular/router": "^7.2.2",
     "@ansyn/event-drops": "^0.2.8-1.9",
+    "@ansyn/ng-pick-datetime": "^7.0.1",
     "@auth0/angular-jwt": "^2.0.0",
     "@ngrx/core": "^1.2.0",
     "@ngrx/effects": "^7.2.0",
@@ -61,7 +62,6 @@
     "dltjs": "^0.1.1",
     "dom-to-image": "^2.6.0",
     "file-saver": "^1.3.8",
-    "flatpickr": "^4.5.7",
     "font-awesome": "^4.7.0",
     "geojson": "^0.5.0",
     "gl-matrix": "^2.8.1",
